Добавляет страницу контактов

--- a/source/index.html
+++ b/source/index.html
@@ -348,6 +348,11 @@
             Правила
           </a>
         </li>
+        <li>
+          <a href="contacts.html">
+            Контакты
+          </a>
+        </li>
       </ul>
     </div>
   </main>
