Добавляет страницу услуг

--- a/source/index.html
+++ b/source/index.html
@@ -353,6 +353,11 @@
             Контакты
           </a>
         </li>
+        <li>
+          <a href="services.html">
+            Услуги
+          </a>
+        </li>
       </ul>
     </div>
   </main>
