--- a/source/index.html
+++ b/source/index.html
@@ -358,6 +358,11 @@
             Услуги
           </a>
         </li>
+        <li>
+          <a href="about-us.html">
+            Про проект
+          </a>
+        </li>
       </ul>
     </div>
   </main>
