Добавляет рандж слайдер

--- a/source/catalog-school.html
+++ b/source/catalog-school.html
@@ -908,11 +908,7 @@
                         </span>
                         </div>
                         <div class="slider__action">
-                          <button type="button" class="slider__handle slider__handle--left" aria-label="Цена от цена" style="left: 17px;"></button>
-                          <button type="button" class="slider__handle slider__handle--right" aria-label="Цена до цена" style="right: 17px;"></button>
-                          <div class="slider__progress">
-                            <div class="slider__line" style="width: 82%; left: 22px;"></div>
-                          </div>
+                          <div class="slider__progress"></div>
                         </div>
                       </div>
                     </fieldset>
